--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 body{
     font-size: 16px;
     line-height: 1.5;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     background-color: var(--bg-black-50);
 }
 /*---- css code for the imported fonts----*/
@@ -109,14 +109,17 @@ img{
     width: 30px;
     height: 30px;
     border: 4px solid #8a49ff;
-    right: 30%;
-    bottom: 10%;
+    bottom: 20%;
+    margin-left: 90%;
+    position: absolute;
     animation: spin 10s linear infinite
+
 }
 .effect-2{
     left: 3%;
     bottom: 20%;
     width: 40px;
+    position: absolute;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -133,8 +136,8 @@ img{
     width: 180px;
     border: 25px solid var(--skin-color);
     border-radius: 50%;
-    left: 50%;
-    top: -120px;
+    margin-top: -120px;
+    margin-left: 40%;
     animation: leftBounce 3s ease-in-out infinite
 }
 @keyframes spin{
